# Bangboo

./: .gitignore  Bangboo.pro  BangbooTranslater.cpp  BangbooTranslater.h  CMakeLists.txt  QMLUtils.cpp  QMLUtils.h  main.cpp  main.qml
android/: AndroidManifest.xml
